# nand2tetris-emulation

./: .gitignore  Cargo.toml  Glyphs.jack.todo  README.md  blinky  debug-output  draw-square  jack-bug-log.md  parser_viz_data.json  questions.md  run  rustfmt.toml  todo.md
bindings/: Class.ts  (+25 more)
compiler/: Cargo.toml
compiler/snapshot_tests/abs/: Main.jack  screen.pbm
compiler/snapshot_tests/addition/: Main.jack  screen.pbm
compiler/snapshot_tests/addition-by-function-call/: Main.jack  screen.pbm
compiler/snapshot_tests/division/: Main.jack  screen.pbm
compiler/snapshot_tests/erase_last_char/: screen.pbm
compiler/snapshot_tests/fibbonacci/: Main.jack  screen.pbm
compiler/snapshot_tests/multiplication/: Main.jack  screen.pbm
compiler/snapshot_tests/rectangle/: Main.jack  Rectangle.jack  screen.pbm
compiler/snapshot_tests/sqrt/: Main.jack  screen.pbm
compiler/snapshot_tests/sqrt_144/: Main.jack  foo.pbm
compiler/snapshot_tests/sum_even_fibonaccis/: Main.jack  screen.pbm
compiler/src/: config.rs  main.rs
compiler/src/asm_compressor/: mod.rs
compiler/src/assembler/: codegen.rs  first_pass.rs  mod.rs  parser.rs  tokenizer.rs
compiler/src/fonts/: mod.rs
compiler/src/jack_compiler/: call_graph_analysis.rs  codegen.rs  desugar.rs  jack_node_types.rs  mod.rs  parser.rs  sourcemap.rs  tokenizer.rs
compiler/src/utils/: source_modules.rs  testing.rs  tokenizer.rs
compiler/src/vm_compiler/: asdf  call_graph_analyser.rs  codegen.rs  mod.rs  parser.rs  sourcemap.rs  tokenizer.rs
core/: --nocapture  Cargo.toml  foo.jack  todo.md
core/src/: main.rs
(+352 files in other folders)
