[package]
name = "nand2tetris-emulation"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 3

[dependencies]
cargo-llvm-cov = "0.4.8"
clap = { version = "3.1.13", features = ["derive"] }
itertools = "0.10.3"
minifb = "0.23.0"
regex = "1.5.5"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
tabled = "0.7.0"
